--- a/Analysis of Stress Level Dataset.ipynb
+++ b/Analysis of Stress Level Dataset.ipynb
@@ -2,11 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bdf8ec39",
+   "execution_count": 1,
+   "id": "9081a587",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   anxiety_level  self_esteem  mental_health_history  depression  headache  \\\n",
+      "0             14           20                      0          11         2   \n",
+      "1             15            8                      1          15         5   \n",
+      "2             12           18                      1          14         2   \n",
+      "3             16           12                      1          15         4   \n",
+      "4             16           28                      0           7         2   \n",
+      "\n",
+      "   blood_pressure  sleep_quality  breathing_problem  noise_level  \\\n",
+      "0               1              2                  4            2   \n",
+      "1               3              1                  4            3   \n",
+      "2               1              2                  2            2   \n",
+      "3               3              1                  3            4   \n",
+      "4               3              5                  1            3   \n",
+      "\n",
+      "   living_conditions  ...  basic_needs  academic_performance  study_load  \\\n",
+      "0                  3  ...            2                     3           2   \n",
+      "1                  1  ...            2                     1           4   \n",
+      "2                  2  ...            2                     2           3   \n",
+      "3                  2  ...            2                     2           4   \n",
+      "4                  2  ...            3                     4           3   \n",
+      "\n",
+      "   teacher_student_relationship  future_career_concerns  social_support  \\\n",
+      "0                             3                       3               2   \n",
+      "1                             1                       5               1   \n",
+      "2                             3                       2               2   \n",
+      "3                             1                       4               1   \n",
+      "4                             1                       2               1   \n",
+      "\n",
+      "   peer_pressure  extracurricular_activities  bullying  stress_level  \n",
+      "0              3                           3         2             1  \n",
+      "1              4                           5         5             2  \n",
+      "2              3                           2         2             1  \n",
+      "3              4                           4         5             2  \n",
+      "4              5                           0         5             1  \n",
+      "\n",
+      "[5 rows x 21 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "stress_data = pd.read_csv('StressLevelDataset.csv')\n",
+    "\n",
+    "print(stress_data.head())"
+   ]
   }
  ],
  "metadata": {
