Updated Jupyter Notebook

--- a/Analysis of Stress Level Dataset.ipynb
+++ b/Analysis of Stress Level Dataset.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9081a587",
+   "id": "881e52cc",
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +55,47 @@
     "stress_data = pd.read_csv('StressLevelDataset.csv')\n",
     "\n",
     "print(stress_data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9803148c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of students in the dataset is:\n",
+      "1100\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The number of students in the dataset is:')\n",
+    "\n",
+    "print(len(stress_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5fc75daa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average anxiety level of the students is 11.06 with the maximum anxiety level at 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "anxiety_level_mean = stress_data['anxiety_level'].mean()\n",
+    "anxiety_level_max = stress_data['anxiety_level'].max()\n",
+    "print('The average anxiety level of the students is', anxiety_level_mean.round(2),'with the maximum anxiety level at', anxiety_level_max)"
    ]
   }
  ],
