Update Analysis of Stress Level Dataset.ipynb

--- a/Analysis of Stress Level Dataset.ipynb
+++ b/Analysis of Stress Level Dataset.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "881e52cc",
+   "id": "f085e2f5",
    "metadata": {},
    "outputs": [
     {
@@ -59,29 +59,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9803148c",
+   "execution_count": 19,
+   "id": "2bc47b3f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of students in the dataset is:\n",
-      "1100\n"
+      "The total number of students in the dataset is 1100\n"
      ]
     }
    ],
    "source": [
-    "print('The number of students in the dataset is:')\n",
+    "total_students = len(stress_data)\n",
     "\n",
-    "print(len(stress_data))"
+    "print(f'The total number of students in the dataset is {total_students}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5fc75daa",
+   "execution_count": 15,
+   "id": "f5734e36",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +94,27 @@
    "source": [
     "anxiety_level_mean = stress_data['anxiety_level'].mean()\n",
     "anxiety_level_max = stress_data['anxiety_level'].max()\n",
-    "print('The average anxiety level of the students is', anxiety_level_mean.round(2),'with the maximum anxiety level at', anxiety_level_max)"
+    "print(f'The average anxiety level of the students is {anxiety_level_mean.round(2)} with the maximum anxiety level at {anxiety_level_max}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "aaf700db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of students with a reported history of mental illness is 542\n"
+     ]
+    }
+   ],
+   "source": [
+    "mental_health_hist_count = stress_data['mental_health_history'].value_counts()[1]\n",
+    "percent_mental_health_hist = mental_health_hist_count/total_students\n",
+    "print(f\"The number of students with a reported history of mental illness is {mental_health_hist_count}. Out of the total {total_students} students surveyed, about {percent_mental_health_hist.round(1)}%\")"
    ]
   }
  ],
