--- a/Analysis of Stress Level Dataset.ipynb
+++ b/Analysis of Stress Level Dataset.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f085e2f5",
-   "metadata": {},
+   "execution_count": 27,
+   "id": "f61545c3",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -54,33 +56,37 @@
     "\n",
     "stress_data = pd.read_csv('StressLevelDataset.csv')\n",
     "\n",
+    "#Testing to see what the first 5 rows of data look like\n",
+    "\n",
     "print(stress_data.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "2bc47b3f",
+   "execution_count": 26,
+   "id": "bd6c14c4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The total number of students in the dataset is 1100\n"
+      "The total number of students in the dataset is 1100.\n"
      ]
     }
    ],
    "source": [
+    "#The values in the data reflect a scale, which is a form of discrete data.\n",
+    "\n",
     "total_students = len(stress_data)\n",
     "\n",
-    "print(f'The total number of students in the dataset is {total_students}')"
+    "print(f'The total number of students in the dataset is {total_students}.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f5734e36",
+   "execution_count": 21,
+   "id": "0fa3ad08",
    "metadata": {},
    "outputs": [
     {
@@ -94,27 +100,88 @@
    "source": [
     "anxiety_level_mean = stress_data['anxiety_level'].mean()\n",
     "anxiety_level_max = stress_data['anxiety_level'].max()\n",
-    "print(f'The average anxiety level of the students is {anxiety_level_mean.round(2)} with the maximum anxiety level at {anxiety_level_max}')"
+    "print(f'The average anxiety level of the students is {anxiety_level_mean.round(2)} with the maximum anxiety level at {anxiety_level_max}.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "aaf700db",
+   "execution_count": 23,
+   "id": "0f0dee02",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of students with a reported history of mental illness is 542\n"
+      "The number of students with a reported history of mental illness is 542. Out of the 1100 students surveyed, about 49.3% of the total have a history of mental illness.\n"
      ]
     }
    ],
    "source": [
     "mental_health_hist_count = stress_data['mental_health_history'].value_counts()[1]\n",
-    "percent_mental_health_hist = mental_health_hist_count/total_students\n",
-    "print(f\"The number of students with a reported history of mental illness is {mental_health_hist_count}. Out of the total {total_students} students surveyed, about {percent_mental_health_hist.round(1)}%\")"
+    "percent_mental_health_hist = (mental_health_hist_count/total_students)*100\n",
+    "print(f\"The number of students with a reported history of mental illness is {mental_health_hist_count}. Out of the {total_students} students surveyed, about {percent_mental_health_hist.round(1)}% of the total have a history of mental illness.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0594b011",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of students that are below the average self-esteem of 17.8 is 507.\n"
+     ]
+    }
+   ],
+   "source": [
+    "self_esteem_mean = stress_data.self_esteem.mean()\n",
+    "num_self_esteem_below_mean = len(stress_data[stress_data['self_esteem']<self_esteem_mean])\n",
+    "\n",
+    "print(f'The number of students that are below the average self-esteem of {self_esteem_mean.round(1)} is {num_self_esteem_below_mean}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8b2f6df8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "96.0% of the students surveyed reported experiencing some level of depression.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_depression_above_zero = len(stress_data[stress_data['depression']>0])\n",
+    "percent_depression = (num_depression_above_zero/total_students)*100\n",
+    "print(f'{percent_depression}% of the students surveyed reported experiencing some level of depression.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "676a81ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "269 students experience headaches frequently.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_headache_frequent = len(stress_data[stress_data['headache']>3])\n",
+    "\n",
+    "print(f'{num_headache_frequent} students experience headaches frequently.')"
    ]
   }
  ],
