--- a/Analysis of Stress Level Dataset.ipynb
+++ b/Analysis of Stress Level Dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "f61545c3",
    "metadata": {
     "scrolled": true
@@ -63,15 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "bd6c14c4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The total number of students in the dataset is 1100.\n"
+      "The total number of students in the dataset is 1100.\n",
+      "The average anxiety level of the students is 11.06 with the maximum anxiety level at 21.\n",
+      "The number of students with a reported history of mental illness is 542. Out of the 1100 students surveyed, about 49.3% of the total have a history of mental illness.\n"
      ]
     }
    ],
@@ -80,44 +84,12 @@
     "\n",
     "total_students = len(stress_data)\n",
     "\n",
-    "print(f'The total number of students in the dataset is {total_students}.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "0fa3ad08",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The average anxiety level of the students is 11.06 with the maximum anxiety level at 21\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(f'The total number of students in the dataset is {total_students}.')\n",
+    "\n",
     "anxiety_level_mean = stress_data['anxiety_level'].mean()\n",
     "anxiety_level_max = stress_data['anxiety_level'].max()\n",
-    "print(f'The average anxiety level of the students is {anxiety_level_mean.round(2)} with the maximum anxiety level at {anxiety_level_max}.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "0f0dee02",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number of students with a reported history of mental illness is 542. Out of the 1100 students surveyed, about 49.3% of the total have a history of mental illness.\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(f'The average anxiety level of the students is {anxiety_level_mean.round(2)} with the maximum anxiety level at {anxiety_level_max}.')\n",
+    "\n",
     "mental_health_hist_count = stress_data['mental_health_history'].value_counts()[1]\n",
     "percent_mental_health_hist = (mental_health_hist_count/total_students)*100\n",
     "print(f\"The number of students with a reported history of mental illness is {mental_health_hist_count}. Out of the {total_students} students surveyed, about {percent_mental_health_hist.round(1)}% of the total have a history of mental illness.\")"
@@ -125,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "0594b011",
    "metadata": {},
    "outputs": [
@@ -133,7 +105,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of students that are below the average self-esteem of 17.8 is 507.\n"
+      "The number of students that are below the average self-esteem of 17.8 is 507.\n",
+      "82.0% of the students surveyed reported experiencing some level of depression.\n"
      ]
     }
    ],
@@ -141,32 +114,38 @@
     "self_esteem_mean = stress_data.self_esteem.mean()\n",
     "num_self_esteem_below_mean = len(stress_data[stress_data['self_esteem']<self_esteem_mean])\n",
     "\n",
-    "print(f'The number of students that are below the average self-esteem of {self_esteem_mean.round(1)} is {num_self_esteem_below_mean}.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "8b2f6df8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "96.0% of the students surveyed reported experiencing some level of depression.\n"
-     ]
-    }
-   ],
-   "source": [
-    "num_depression_above_zero = len(stress_data[stress_data['depression']>0])\n",
+    "print(f'The number of students that are below the average self-esteem of {self_esteem_mean.round(1)} is {num_self_esteem_below_mean}.')\n",
+    "\n",
+    "#Using the PHQ-9 Rating to measure depression, anything greater than 4 is a form of depression\n",
+    "\n",
+    "num_depression_above_zero = len(stress_data[stress_data['depression']>4])\n",
     "percent_depression = (num_depression_above_zero/total_students)*100\n",
     "print(f'{percent_depression}% of the students surveyed reported experiencing some level of depression.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
+   "id": "284d02e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (2272860161.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[9], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    display.Image(\"C:\\Users\\kenan\\OneDrive\\Documents\\GitHub\\Codecademy-ML-AI-Engineer-Foundations-Final-Portfolio\\phq-9.png\")\u001b[0m\n\u001b[1;37m                                                                                                                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython import display\n",
+    "display.Image(\"C:\\Users\\kenan\\OneDrive\\Documents\\GitHub\\Codecademy-ML-AI-Engineer-Foundations-Final-Portfolio\\phq-9.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "676a81ad",
    "metadata": {},
    "outputs": [
@@ -174,14 +153,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "269 students experience headaches frequently.\n"
+      "269 students experience headaches frequently.\n",
+      "The average blood pressure is 2.2\n"
      ]
     }
    ],
    "source": [
+    "#On a scale from 0 to 5, with anything over 3 as \"frequent headaches\"\n",
     "num_headache_frequent = len(stress_data[stress_data['headache']>3])\n",
     "\n",
-    "print(f'{num_headache_frequent} students experience headaches frequently.')"
+    "print(f'{num_headache_frequent} students experience headaches frequently.')\n",
+    "\n",
+    "#On a scale from 1 to 3\n",
+    "blood_pressure_mean = stress_data.blood_pressure.mean().round(1)\n",
+    "\n",
+    "print(f'The average blood pressure ratin is {blood_pressure_mean}')"
    ]
   }
  ],
